cut urls
