# api/openapi/sanya-spb-URL-shortener-1.1.0-resolved.yaml
@@ -121,7 +121,7 @@ paths:
           description: Internal Server Error
         "501":
           description: Not Implemented
-  /info/{uuid}:
+  /i/{uuid}:
     get:
       tags:
       - user
@@ -154,7 +154,7 @@ paths:
           description: Internal Server Error
         "501":
           description: Not Implemented
-  /delete/{uuid}:
+  /d/{uuid}:
     delete:
       tags:
       - admin
@@ -183,7 +183,7 @@ paths:
           description: Internal Server Error
         "501":
           description: Not Implemented
-  /delete/r/{uuid}:
+  /d/r/{uuid}:
     delete:
       tags:
       - admin
