# api/router/router.go
@@ -35,12 +35,12 @@ func NewRouter(hHandler *handler.Handler) *Router {
 		rAdm.Get("/stat", rRouter.Stat)
 		rAdm.Put("/{uuid}", rRouter.Update)
 		rAdm.Post("/r/{uuid}", rRouter.UpdateRet)
-		rAdm.Delete("/delete/{uuid}", rRouter.Delete)
-		rAdm.Delete("/delete/r/{uuid}", rRouter.DeleteRet)
+		rAdm.Delete("/d/{uuid}", rRouter.Delete)
+		rAdm.Delete("/d/r/{uuid}", rRouter.DeleteRet)
 		rAdm.Get("/status/{code}", rRouter.StatusCode)
 	}) //.Use(auth.AuthMiddleware) // TODO: заменить на middleware.BasicAuth()
 	r.Put("/", rRouter.Create)
-	r.Get("/info/{uuid}", rRouter.Read)
+	r.Get("/i/{uuid}", rRouter.Read)
 	r.Get("/status", rRouter.Status)
 	r.Get("/", rRouter.Go)
 
